Upgrade to AWS SDK v2
* Upgrade to Spring Integration AWS `3.0.1`
* Upgrade to Spring Cloud AWS `3.0.1`
* Use `spring-cloud-aws-dependencies` BOM to manage Spring Cloud AWS deps, as well as AWS SDK
* Remove `AmazonS3Properties` in favor of similar properties in the Spring Cloud AWS auto-configuration
* Remove `CompatibleStorageAmazonS3Configuration` in favor of its code migration to the single `AmazonS3Configuration`
* Fix `supplier`, `consumer`, `source` and `sink` for S3 to use API and programing model from the mentioned upgrades
* Add extra `dataflow-configuration-metadata` entries for the mentioned properties from the Spring Cloud AWS auto-configuration
* Regenerate README for `s3-source` and `s3-sink`
* Fix `metadata-store-common` to use the latest Spring Integration AWS for DynamoDB store impl

--- a/applications/source/s3-source/README.adoc
+++ b/applications/source/s3-source/README.adoc
@@ -50,7 +50,7 @@ A `java.io.File` object.
 
 == Options
 
-The **$$s3$$** $$source$$ has the following options:
+The `s3-source` has the following options:
 
 //tag::configuration-properties[]
 Properties grouped by prefix:
@@ -112,32 +112,35 @@ $$preserve-timestamp$$:: $$To transfer or not the timestamp of the remote file t
 $$remote-dir$$:: $$AWS S3 bucket resource.$$ *($$String$$, default: `$$bucket$$`)*
 $$remote-file-separator$$:: $$Remote File separator.$$ *($$String$$, default: `$$/$$`)*
 $$tmp-file-suffix$$:: $$Temporary file suffix.$$ *($$String$$, default: `$$.tmp$$`)*
+
+=== spring.cloud.aws.credentials
+
+$$access-key$$:: $$The access key to be used with a static provider.$$ *($$String$$, default: `$$<none>$$`)*
+$$instance-profile$$:: $$Configures an instance profile credentials provider with no further configuration.$$ *($$Boolean$$, default: `$$false$$`)*
+$$profile$$:: $$The AWS profile.$$ *($$Profile$$, default: `$$<none>$$`)*
+$$secret-key$$:: $$The secret key to be used with a static provider.$$ *($$String$$, default: `$$<none>$$`)*
+
+=== spring.cloud.aws.region
+
+$$instance-profile$$:: $$Configures an instance profile region provider with no further configuration.$$ *($$Boolean$$, default: `$$false$$`)*
+$$profile$$:: $$The AWS profile.$$ *($$Profile$$, default: `$$<none>$$`)*
+$$static$$:: $$<documentation missing>$$ *($$String$$, default: `$$<none>$$`)*
+
+=== spring.cloud.aws.s3
+
+$$accelerate-mode-enabled$$:: $$Option to enable using the accelerate endpoint when accessing S3. Accelerate endpoints allow faster transfer of objects by using Amazon CloudFront's globally distributed edge locations.$$ *($$Boolean$$, default: `$$<none>$$`)*
+$$checksum-validation-enabled$$:: $$Option to disable doing a validation of the checksum of an object stored in S3.$$ *($$Boolean$$, default: `$$<none>$$`)*
+$$chunked-encoding-enabled$$:: $$Option to enable using chunked encoding when signing the request payload for {@link software.amazon.awssdk.services.s3.model.PutObjectRequest} and {@link software.amazon.awssdk.services.s3.model.UploadPartRequest}.$$ *($$Boolean$$, default: `$$<none>$$`)*
+$$endpoint$$:: $$Overrides the default endpoint.$$ *($$URI$$, default: `$$<none>$$`)*
+$$path-style-access-enabled$$:: $$Option to enable using path style access for accessing S3 objects instead of DNS style access. DNS style access is preferred as it will result in better load balancing when accessing S3.$$ *($$Boolean$$, default: `$$<none>$$`)*
+$$region$$:: $$Overrides the default region.$$ *($$String$$, default: `$$<none>$$`)*
+$$use-arn-region-enabled$$:: $$If an S3 resource ARN is passed in as the target of an S3 operation that has a different region to the one the client was configured with, this flag must be set to 'true' to permit the client to make a cross-region call to the region specified in the ARN otherwise an exception will be thrown.$$ *($$Boolean$$, default: `$$<none>$$`)*
 //end::configuration-properties[]
 
 == Amazon AWS common options
 
-The Amazon S3 Source (as all other Amazon AWS applications) is based on the
-https://github.com/spring-cloud/spring-cloud-aws[Spring Cloud AWS] project as a foundation, and its auto-configuration
-classes are used automatically by Spring Boot.
+The Amazon S3 Source (as all other Amazon AWS applications) is based on the https://awspring.io/[Spring Cloud AWS] project as a foundation, and its auto-configuration classes are used automatically by Spring Boot.
 Consult their documentation regarding required and useful auto-configuration properties.
-
-Some of them are about AWS credentials:
-
-- cloud.aws.credentials.accessKey
-- cloud.aws.credentials.secretKey
-- cloud.aws.credentials.instanceProfile
-- cloud.aws.credentials.profileName
-- cloud.aws.credentials.profilePath
-
-Other are for AWS `Region` definition:
-
-- cloud.aws.region.auto
-- cloud.aws.region.static
-
-And for AWS `Stack`:
-
-- cloud.aws.stack.auto
-- cloud.aws.stack.name
 
 == Examples
 
