Update to Spring Cloud 2022.0.4
* Also update to Spring Cloud Stream 4.0.4

--- a/applications/sink/redis-sink/README.adoc
+++ b/applications/sink/redis-sink/README.adoc
@@ -30,7 +30,7 @@ $$host$$:: $$Redis server host.$$ *($$String$$, default: `$$localhost$$`)*
 $$password$$:: $$Login password of the redis server.$$ *($$String$$, default: `$$<none>$$`)*
 $$port$$:: $$Redis server port.$$ *($$Integer$$, default: `$$6379$$`)*
 $$timeout$$:: $$Read timeout.$$ *($$Duration$$, default: `$$<none>$$`)*
-$$url$$:: $$Connection URL. Overrides host, port, and password. User is ignored. Example: redis://user:password@example.com:6379$$ *($$String$$, default: `$$<none>$$`)*
+$$url$$:: $$Connection URL. Overrides host, port, username, and password. Example: redis://user:password@example.com:6379$$ *($$String$$, default: `$$<none>$$`)*
 $$username$$:: $$Login username of the redis server.$$ *($$String$$, default: `$$<none>$$`)*
 
 === spring.data.redis.cluster
