--- a/README.adoc
+++ b/README.adoc
@@ -38,6 +38,7 @@ The following are the various components of this repository.
 |link:functions/supplier/ftp-supplier/README.adoc[FTP]
 |link:functions/function/header-enricher-function/README.adoc[Header-Enricher]
 |link:functions/consumer/elasticsearch-consumer/README.adoc[Elasticsearch]
+
 |
 |link:functions/function/header-filter-function/README.adoc[Header-Filter]
 |link:functions/consumer/file-consumer/README.adoc[File]
@@ -49,18 +50,16 @@ The following are the various components of this repository.
 |link:functions/supplier/jdbc-supplier/README.adoc[JDBC]
 |link:functions/function/image-recognition-function/README.adoc[Image Recognition(Tensorflow)]
 |
-|link:functions/supplier/jms-supplier/README.adoc[JMS]
 
+|link:functions/supplier/jms-supplier/README.adoc[JMS]
 |link:functions/function/object-detection-function/README.adoc[Object Detection(Tensorflow)]
 |link:functions/consumer/jdbc-consumer/README.adoc[JDBC]
 
 |link:functions/supplier/mail-supplier/README.adoc[Mail]
-
 |link:functions/function/semantic-segmentation-function/README.adoc[Semantic Segmentation(Tensorflow)]
 |link:functions/consumer/log-consumer/README.adoc[Log]
 
 |link:functions/supplier/mongodb-supplier/README.adoc[MongoDB]
-
 |link:functions/function/spel-function/README.adoc[SpEL]
 |link:functions/consumer/mongodb-consumer/README.adoc[MongoDB]
 
@@ -104,9 +103,11 @@ The following are the various components of this repository.
 |
 |
 |link:functions/consumer/wavefront-consumer/README.adoc[Wavefront]
+
 |link:functions/supplier/xmpp-supplier/README.adoc[XMPP]
 |
 |link:functions/consumer/xmpp-consumer/README.adoc[XMPP]
+
 |===
 
 === Reusable Spring Cloud Stream Applications
@@ -116,73 +117,99 @@ The following are the various components of this repository.
 |link:applications/source/debezium-source/README.adoc[Debezium supplier]
 |link:applications/processor/aggregator-processor/README.adoc[Aggregator]
 |link:applications/sink/analytics-sink/README.adoc[Analytics]
+
 |link:applications/source/file-source/README.adoc[File]
 |link:applications/processor/bridge-processor/README.adoc[Bridge]
 |link:applications/sink/cassandra-sink/README.adoc[Cassandra]
+
 |link:applications/source/ftp-source/README.adoc[FTP]
 |link:applications/processor/filter-processor/README.adoc[Filter]
 |link:applications/sink/elasticsearch-sink/README.adoc[Elasticsearch]
+
+|
 |link:applications/processor/groovy-processor/README.adoc[Groovy]
-|link:applications/sink/file-sink/README.adoc[Fiile]
+|link:applications/sink/file-sink/README.adoc[File]
+
 |link:applications/source/http-source/README.adoc[HTTP]
 |link:applications/processor/header-enricher-processor/README.adoc[Header-Enricher]
 |link:applications/sink/ftp-sink/README.adoc[FTP]
+
 |link:applications/source/jdbc-source/README.adoc[JDBC]
 |link:applications/processor/http-request-processor/README.adoc[HTTP Request]
+|
+
 |link:applications/source/jms-source/README.adoc[JMS]
 |link:applications/processor/image-recognition-processor/README.adoc[Image Recognition(Tensorflow)]
 |link:applications/sink/jdbc-sink/README.adoc[JDBC]
+
 |link:applications/source/load-generator-source/README.adoc[Load-Generator]
 |link:applications/processor/object-detection-processor/README.adoc[Object Detection(Tensorflow)]
 |link:applications/sink/log-sink/README.adoc[Log]
+
 |link:applications/source/mail-source/README.adoc[Mail]
 |
 |link:applications/sink/mongodb-sink/README.adoc[MongoDB]
+
 |link:applications/source/mongodb-source/README.adoc[MongoDB]
 |link:applications/processor/semantic-segmentation-processor/README.adoc[Semantic Segmentation(Tensorflow)]
 |link:applications/sink/mqtt-sink/README.adoc[MQTT]
+
 |link:applications/source/mqtt-source/README.adoc[MQTT]
 |link:applications/processor/script-processor/README.adoc[Script]
 |link:applications/sink/pgcopy-sink/README.adoc[Pgcopy]
+
 |link:applications/source/rabbit-source/README.adoc[RabbitMQ]
 |link:applications/processor/splitter-processor/README.adoc[Splitter]
 |link:applications/sink/rabbit-sink/README.adoc[RabbitMQ]
+
 |link:applications/source/s3-source/README.adoc[AWS S3]
 |link:applications/processor/transform-processor/README.adoc[Transform]
 |link:applications/sink/redis-sink/README.adoc[Redis]
+
 |link:applications/source/sftp-source/README.adoc[SFTP]
 |link:applications/processor/twitter-trend-processor/README.adoc[Twitter Trend]
 |link:applications/sink/router-sink/README.adoc[Router]
+
 |link:applications/source/syslog-source/README.adoc[Syslog]
 |
 |link:applications/sink/rsocket-sink/README.adoc[RSocket]
+
 |link:applications/source/tcp-source/README.adoc[TCP]
 |
 |link:applications/sink/sftp-sink/README.adoc[SFTP]
+
 |link:applications/source/time-source/README.adoc[Time]
 |
 |link:applications/sink/tasklauncher-sink/README.adoc[Task Launcher]
+
 |link:applications/source/twitter-message-source/README.adoc[Twitter Message]
 |
 |link:applications/sink/tcp-sink/README.adoc[TCP]
+
 |link:applications/source/twitter-search-source/README.adoc[Twitter Search]
 |
 |link:applications/sink/throughput-sink/README.adoc[Throughput]
+
 |link:applications/source/twitter-stream-source/README.adoc[Twitter Stream]
 |
 |link:applications/sink/twitter-message-sink/README.adoc[Twitter Message]
+
 |link:applications/source/websocket-source/README.adoc[Websocket]
 |
 |link:applications/sink/twitter-update-sink/README.adoc[Twitter Update]
+
 |link:applications/source/xmpp-source/README.adoc[XMPP]
 |
 |link:applications/sink/wavefront-sink/README.adoc[Wavefront]
+
 |
 |
 |link:applications/sink/websocket-sink/README.adoc[Websocket]
+
 |
 |
 |link:applications/sink/xmpp-sink/README.adoc[XMPP]
+
 |===
 
 === Build
