--- a/applications/sink/twitter-update-sink/README.adoc
+++ b/applications/sink/twitter-update-sink/README.adoc
@@ -21,17 +21,17 @@ Properties grouped by prefix:
 
 === twitter.update
 
-$$attachment-url$$:: $$<documentation missing>$$ *($$Expression$$, default: `$$<none>$$`)*
-$$display-coordinates$$:: $$<documentation missing>$$ *($$Expression$$, default: `$$<none>$$`)*
-$$in-reply-to-status-id$$:: $$<documentation missing>$$ *($$Expression$$, default: `$$<none>$$`)*
-$$media-ids$$:: $$<documentation missing>$$ *($$Expression$$, default: `$$<none>$$`)*
-$$place-id$$:: $$<documentation missing>$$ *($$Expression$$, default: `$$<none>$$`)*
-$$text$$:: $$<documentation missing>$$ *($$Expression$$, default: `$$<none>$$`)*
+$$attachment-url$$:: $$(SpEL expression) In order for a URL to not be counted in the text body of an extended Tweet, provide a URL as a Tweet attachment. This URL must be a Tweet permalink, or Direct Message deep link. Arbitrary, non-Twitter URLs must remain in the text. URLs passed to the attachment_url parameter not matching either a Tweet permalink or Direct Message deep link will fail at Tweet creation and cause an exception.$$ *($$Expression$$, default: `$$<none>$$`)*
+$$display-coordinates$$:: $$(SpEL expression) Whether to put a pin on the exact coordinates a Tweet has been sent from.$$ *($$Expression$$, default: `$$<none>$$`)*
+$$in-reply-to-status-id$$:: $$(SpEL expression) The ID of an existing text that the update is in reply to. Note: This parameter will be ignored unless the author of the Tweet this parameter references is mentioned within the text. Therefore, you must include @username, where username is the author of the referenced Tweet, within the update. When inReplyToStatusId is set the auto_populate_reply_metadata is automatically set as well. Later ensures that leading @mentions will be looked up from the original Tweet, and added to the new Tweet from there. This wil append @mentions into the metadata of an extended Tweet as a reply chain grows, until the limit on @mentions is reached. In cases where the original Tweet has been deleted, the reply will fail.$$ *($$Expression$$, default: `$$<none>$$`)*
+$$media-ids$$:: $$(SpEL expression) A comma-delimited list of media_ids to associate with the Tweet. You may include up to 4 photos or 1 animated GIF or 1 video in a Tweet. See Uploading Media for further details on uploading media.$$ *($$Expression$$, default: `$$<none>$$`)*
+$$place-id$$:: $$(SpEL expression) A place in the world.$$ *($$Expression$$, default: `$$<none>$$`)*
+$$text$$:: $$(SpEL expression) The text of the text update. URL encode as necessary. t.co link wrapping will affect character counts. Defaults to message's payload$$ *($$Expression$$, default: `$$payload$$`)*
 
 === twitter.update.location
 
-$$lat$$:: $$<documentation missing>$$ *($$Expression$$, default: `$$<none>$$`)*
-$$lon$$:: $$<documentation missing>$$ *($$Expression$$, default: `$$<none>$$`)*
+$$lat$$:: $$The latitude of the location this Tweet refers to. This parameter will be ignored unless it is inside the range -90.0 to +90.0 (North is positive) inclusive. It will also be ignored if there is no corresponding long parameter.$$ *($$Expression$$, default: `$$<none>$$`)*
+$$lon$$:: $$The longitude of the location this Tweet refers to. The valid ranges for longitude are -180.0 to +180.0 (East is positive) inclusive. This parameter will be ignored if outside that range, if it is not a number, if geo_enabled is disabled, or if there is no corresponding lat parameter.$$ *($$Expression$$, default: `$$<none>$$`)*
 //end::configuration-properties[]
 
 //end::ref-doc[]
